Agregue el fonde del header

--- a/Clase 8/css/style.css
+++ b/Clase 8/css/style.css
@@ -26,3 +26,6 @@ footer {
     color: #FFFFFF;
     text-align: center;
 }
+header {
+    background-image: url("https://i.pinimg.com/236x/53/8e/6f/538e6fd6eaf30aa3c063aec3c825e4a0.jpg");
+}
