--- a/Clase10/css/style.css
+++ b/Clase10/css/style.css
@@ -22,7 +22,7 @@ h1 {
     font-family: "Roboto";
     height: 150px;
     align-items: center;
-    font-weight: light 300;
+    font-weight: 500;
 }
 main {
     display:flex;
